# window_inspector

./: Cargo.toml  README.md
src/: class_title.rs  error.rs  exist.rs  find.rs  foreground.rs  information.rs  lib.rs  operation.rs  position_size.rs  process.rs  result.rs  top_most.rs
